app4HashingAndChecksum/microservice5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-microservice5
spec:
  selector:
    app: app4-microservice5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8034
  type: ClusterIP
